[package]
name = "linux-meminfo"
version = "0.1.0"
edition = "2021"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
rust-version = "1.73.0"
description = ""
readme = "README.md"
repository = "https://github.com/marcoradocchia/linux-meminfo"
license = "GPL-3.0-only"
keywords = ["linux", "meminfo", "procfs", "memory", "parser"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
