[package]
name = "linux-meminfo"
version = "0.1.0"
authors = ["Marco Radocchia <marco.radocchia@outlook.com"]
edition = "2021"
rust-version = "1.74.0"
description = "An efficient, zero-allocations /proc/meminfo parsing library"
readme = "README.md"
repository = "https://github.com/marcoradocchia/linux-meminfo"
license = "GPL-3.0-only"
keywords = ["meminfo", "linux", "procfs", "parse", "zero-allocation"]
categories = ["filesystem", "os::linux-apis", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "meminfo"
path = "src/lib.rs"

[dependencies]

[features]
utf8-unchecked = []
